test/constBlockCapture.slq

def main(){
	x:=0:int[2];
	for i in 0..2{ x[i]:=H(x[i]); }
	if x=0{
		f:=()=>x; /// error
		x:=0:int[2];
	}else{
		f:=()=>0:int[2];
	}
	return (f,x); /// error
}
